tests/src/frontend/visibility/invalid/module_private_class.sk
module Foo;

private class Bar

fun ok(x: Bar): Bar {
  x
}

module end;

fun main(): void {
  _ = Foo.Bar();
  print_raw("Fail")
}
